welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:4: error: not found: value value
		if ( nums(i)==value) {
                              ^occurrences:3: error: type mismatch;
 found   : Unit
 required: Int
	for ( i<- 0 to nums.length-1) {
               ^