welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
	var nbvalue:Int =0
	for ( i<- 0 to nums.length-1) {
		if ( nums(i)==value) {
			nbvalue=nbvalue+1}
			return nbvalue}
}
